position fixed to sidebar, applied perfect scrollbar, adjust fixed scroll

--- a/client/static/nmns/css/main.css
+++ b/client/static/nmns/css/main.css
@@ -112,6 +112,10 @@ input[type=checkbox]+label{
     width:270px;
     transition:0.3s ease-in-out;
     z-index:1;
+    position:fixed;
+    left:0;
+    top:0;
+    bottom:0;
 }
 #mainAside.sidebar-toggled{
     width:74px;
@@ -123,6 +127,8 @@ input[type=checkbox]+label{
 #mainRow {
     transition:0.3s ease-in-out;
     position:relative;
+    margin-left:270px;
+    margin-right:0;
 }
 #mainRow.sidebar-toggled{
     width:calc(100% - 50px);
@@ -153,9 +159,12 @@ input[type=checkbox]+label{
   background-color:#f8f8f8;
   z-index:1;
 }
-#mainAside.sidebar-toggled + div + #mainRow.fixedScroll .topNav{
+#mainAside.sidebar-toggled + #mainRow.fixedScroll .topNav{
   transition:0.3s left ease-in-out;
   left:74px;
+}
+#mainAside.sidebar-toggled + #mainRow{
+  margin-left:74px;
 }
 /* side bar */
 #sidebarContainer{
